@@ -1,5 +1,7 @@
 ---
-selinux::mcstrans_service_name: mcstrans
+# mcstrans package not a default package in redhat 8
+# but it is the base package list for centos 8
+selinux::mcstrans_service_name: mcstransd
 
 selinux::manage_restorecond_package: false
 selinux::manage_restorecond_service: false
